changed test on spam button

--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
                 console.log('spam');
                 var message = "";
                 for (i = 0; i < 4; i++) {
-                    message = "HOW_FAST_CAN_THIS_GO "+ i ;
+                    message = "https://www.brianoflondon.me/" + i + "/podcast2/brians-forest-talks-exp.xml";
                     console.log(message);
                     var spamsocket = io.connect('http://127.0.0.1:5000');
                     spamsocket.send(message);
